# C

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
include/: budget.h  errors.h  models.h  reports.h  validators.h
src/: budget.c  errors.c  main.c  reports.c  validators.c
tests/cmocka/: test_budget_mocked.c  test_validators.c
tests/criterion/: test_budget.c  test_reports.c  test_validators.c
tests/gtest/: test_budget.cpp  test_reports.cpp  test_validators.cpp
